feat: new layout

--- a/ana-livia/index.html
+++ b/ana-livia/index.html
@@ -129,7 +129,7 @@
     </div>
 
     <div id="hiddenMessage" class="hidden-message">
-        Feliz 1 ano, amor da minha vida! 🥂💖
+        O código está certo porém está incompleto.
     </div>
 
     <script>
@@ -154,7 +154,7 @@
             const code = document.getElementById('codeInput').value.toLowerCase();
             const hiddenMessage = document.getElementById('hiddenMessage');
             
-            if (code === 'amor' || code === 'te amo' || code === '1 ano') {
+            if (code === "LOV3U4EVRN'EVR100" || code === 'te amo' || code === '') {
                 hiddenMessage.style.display = 'block';
                 
                 // Create a burst of hearts on success
