feat: new layout

--- a/ana-livia/index.html
+++ b/ana-livia/index.html
@@ -151,7 +151,7 @@
 
         // Handle button click
         document.getElementById('okButton').addEventListener('click', () => {
-            const code = document.getElementById('codeInput').value();
+            const code = document.getElementById('codeInput').value;
             const hiddenMessage = document.getElementById('hiddenMessage');
             
             if (code === "LOV3U4EVRN'EVR100" || code === 'te amo') {
