feat: new layout

--- a/ana-livia/index.html
+++ b/ana-livia/index.html
@@ -162,7 +162,7 @@
                     setTimeout(createHearts, i * 100);
                 }
             } else {
-                alert('Tente novamente... lembre-se do nosso amor! ❤️');
+                alert('Tente novamente... Podem existir mais pistas.');
             }
         });
 
