--- a/ana-livia/index.html
+++ b/ana-livia/index.html
@@ -229,15 +229,26 @@
 
     <!-- Page 2: Content -->
     <div id="page2" class="container">
-        <h1>Nossa Jornada 💖</h1>
+        <h1>Feliz 1 mês de namoro ❤️</h1>
 
         <div class="love-letter">
-            <p>Querida [Seu Nome],</p>
+            <p>Ana Lívia,</p>
             <p>
+                Chegamos a 1 mês de namoro oficialmente, e como já falamos e sabemos, nossa história é bem mais antiga que isso.
+                Cada dia foi vivido de forma intensa, onde hoje já temos tanta história juntos, que o "tempo" sinceramente, não importa.
+
+                Desde o primeiro dia que nos conhecemos, você se tornou uma parte especial da minha vida.
                 Cada momento ao seu lado tem sido especial. Esta linha do tempo mostra
                 nossa história de amor, desde o primeiro dia até hoje.
+                Cada foto, cada lembrança, é um capítulo que escrevemos juntos.
+                Você é a razão do meu sorriso e a luz dos meus dias.
+
+                Essas são algumas recordações que guardo e carrego comigo. Momentos que ficarão na minha mente para sempre.
+                Obrigado por tanto, obrigado por cada dia ao seu lado.
+
+                Eu amo você ❤️                
             </p>
-            <p>Com todo meu amor,<br>[Seu Nome]</p>
+            <p>Com todo meu amor,<br>Lucas Arantes</p>
         </div>
 
         <div class="timeline-container">
