--- a/ana-livia/index.html
+++ b/ana-livia/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nossa História de Amor ❤️</title>
+    <title>1 Mês - Lucas & Ana Lívia ❤️</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
