--- a/ana-livia/index.html
+++ b/ana-livia/index.html
@@ -234,19 +234,23 @@
         <div class="love-letter">
             <p>Ana Lívia,</p>
             <p>
-                Chegamos a 1 mês de namoro oficialmente, e como já falamos e sabemos, nossa história é bem mais antiga que isso.
-                Cada dia foi vivido de forma intensa, onde hoje já temos tanta história juntos, que o "tempo" sinceramente, não importa.
+                Chegamos a 1 mês de namoro oficialmente, e como já falamos e sabemos, nossa história é bem mais antiga
+                que isso.
+                Cada dia foi vivido de forma intensa, onde hoje já temos tanta história juntos, que o "tempo"
+                sinceramente, não importa.
 
+                <br><br>
                 Desde o primeiro dia que nos conhecemos, você se tornou uma parte especial da minha vida.
                 Cada momento ao seu lado tem sido especial. Esta linha do tempo mostra
                 nossa história de amor, desde o primeiro dia até hoje.
                 Cada foto, cada lembrança, é um capítulo que escrevemos juntos.
                 Você é a razão do meu sorriso e a luz dos meus dias.
-
-                Essas são algumas recordações que guardo e carrego comigo. Momentos que ficarão na minha mente para sempre.
+                <br><br>
+                Essas são algumas recordações que guardo e carrego comigo. Momentos que ficarão na minha mente para
+                sempre.
                 Obrigado por tanto, obrigado por cada dia ao seu lado.
-
-                Eu amo você ❤️                
+                <br><br>
+                Eu amo você ❤️
             </p>
             <p>Com todo meu amor,<br>Lucas Arantes</p>
         </div>
