--- a/ana-livia/index.html
+++ b/ana-livia/index.html
@@ -449,7 +449,7 @@
         document.getElementById('okButton').addEventListener('click', () => {
             const code = document.getElementById('codeInput').value;
 
-            if (code === "LOV3U4EVRN'EVR100PREAOS3UL4D0") {
+            if (code === "LOV3U4EVRN'EVR100PREAOS3UL4D0" || code === "LOV3U4EVRN’EVR100PREAOS3UL4D0") {
                 document.getElementById('page1').style.display = 'none';
                 document.getElementById('page2').style.display = 'block';
 
