fix: ajustes finaisss

--- a/ana-livia/index.html
+++ b/ana-livia/index.html
@@ -303,10 +303,9 @@
 
             <div class="timeline-item">
                 <div class="timeline-content">
-                    <img src="./img/23-03-251.JPG" alt="Encontro especial" class="timeline-img">
+                    <img src="./img/23-03-251.jpg" alt="Encontro especial" class="timeline-img">
                     <div class="timeline-date">23/03/2025</div>
-                    <p class="timeline-desc">Eu super feliz que tava indo muito bem o encontro, pois tinha me apaixonado
-                        já</p>
+                    <p class="timeline-desc">Eu super feliz que tava indo muito bem o encontro, pois tinha me apaixonado já</p>
                 </div>
             </div>
 
@@ -352,7 +351,7 @@
 
             <div class="timeline-item">
                 <div class="timeline-content">
-                    <img src="./img/06-04-25.JPG" alt="Macarrão apimentado" class="timeline-img">
+                    <img src="./img/06-04-25.jpg" alt="Macarrão apimentado" class="timeline-img">
                     <div class="timeline-date">06/04/2025</div>
                     <p class="timeline-desc">Foto onde você me mostrou pro mundo, no rolê do macarrão ultra apimentado
                         kkkkkkkkkk</p>
@@ -361,7 +360,7 @@
 
             <div class="timeline-item">
                 <div class="timeline-content">
-                    <img src="./img/10-04-25.JPG" alt="Anel improvisado" class="timeline-img">
+                    <img src="./img/10-04-25.jpg" alt="Anel improvisado" class="timeline-img">
                     <div class="timeline-date">10/04/2025</div>
                     <p class="timeline-desc">Já começamos a falar de namoro e você mediu o seu dedo com esse anel
                         improvisado</p>
@@ -395,7 +394,7 @@
 
             <div class="timeline-item">
                 <div class="timeline-content">
-                    <img src="./img/12-04-252.JPG" alt="Aliança improvisada" class="timeline-img">
+                    <img src="./img/12-04-252.jpg" alt="Aliança improvisada" class="timeline-img">
                     <div class="timeline-date">12/04/2025</div>
                     <p class="timeline-desc">Primeira foto ainda em Mogi, já com a aliança improvisada kkkkk</p>
                 </div>
@@ -411,7 +410,7 @@
 
             <div class="timeline-item">
                 <div class="timeline-content">
-                    <img src="./img/16-04-25.JPG" alt="Dia da câmera" class="timeline-img">
+                    <img src="./img/16-04-25.jpg" alt="Dia da câmera" class="timeline-img">
                     <div class="timeline-date">16/04/2025</div>
                     <p class="timeline-desc">Dia que dei a sua câmera, você estava tão linda</p>
                 </div>
